# lore-auth-bridge

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  buf.gen.yaml  go.mod  go.sum  rustfmt.toml
.github/workflows/: ci.yml
cmd/lore-auth-server/: main.go  main_test.go
cmd/lore-authctl/: main.go  main_test.go
cmd/lore-claimprobe/: main.go
cmd/lore-goldenvec/: README.md  main.go  main_test.go
configs/: lore-auth.example.yaml
crates/lore-auth-adapters/: Cargo.toml
crates/lore-auth-adapters/examples/: authz_bench.rs  rust-example.yaml
crates/lore-auth-adapters/src/: authz.rs  config.rs  device.rs  idpregistry.rs  lib.rs  memory.rs  oidc.rs  permissions.rs  rs256.rs  sqlite.rs  staticidp.rs
crates/lore-auth-adapters/src/memory/: accounts.rs  audited.rs  devices.rs  grants.rs  groups.rs  mod.rs  resources.rs  state.rs  tokens.rs
crates/lore-auth-adapters/src/sqlite/: accounts.rs  audited.rs  authz_sql.rs  devices.rs  grants.rs  groups.rs  issued_tokens.rs  migrations.rs  mod.rs  resources.rs  state.rs
crates/lore-auth-adapters/tests/: authz.rs  config.rs  idpregistry.rs  memory.rs  oidc.rs  rs256_golden.rs  services.rs  sqlite.rs  staticidp.rs
crates/lore-auth-adapters/tests/support/: mod.rs
crates/lore-auth-core/: Cargo.toml
crates/lore-auth-core/src/: lib.rs  model.rs  ports.rs
crates/lore-auth-core/src/service/: admin.rs  device.rs  login.rs  mod.rs  permission.rs  resource.rs  token.rs
crates/lore-auth-core/tests/: domain.rs  ports.rs
crates/lore-auth-e2e/: Cargo.toml  README.md
crates/lore-auth-e2e/src/: lib.rs
crates/lore-auth-e2e/tests/: e1.rs  e2.rs  harness_self.rs  redact.rs
crates/lore-auth-e2e/tests/support/: mod.rs
crates/lore-auth-inbound/: Cargo.toml
crates/lore-auth-inbound/src/: admin.rs  grpcauth.rs  grpcrebac.rs  httpserver.rs  lib.rs  peer.rs  ratelimit.rs  status.rs
crates/lore-auth-inbound/src/admin/: dashboard.rs  forms.rs  groups.rs  guard.rs  i18n.rs  mod.rs  repositories.rs  simulator.rs  static_assets.rs  templates.rs  users.rs
crates/lore-auth-inbound/src/admin/i18n/: en.yaml  ja.yaml
crates/lore-auth-inbound/src/admin/static/: LICENSE.htmx  LICENSE.pico  NOTICE.md
crates/lore-auth-inbound/src/httpserver/: body.rs  device.rs  login.rs  middleware.rs  mod.rs  response.rs  session.rs  tokens.rs
crates/lore-auth-inbound/templates/admin/: base.html  dashboard.html  groups.html  repositories.html  repositories_table.html  simulator.html  user_access.html  users.html  users_table.html
crates/lore-auth-inbound/tests/: grpcauth.rs  grpcrebac.rs  httpserver.rs  ratelimit.rs
crates/lore-auth-proto/: Cargo.toml  build.rs
crates/lore-auth-proto/src/: lib.rs
crates/lore-auth-server/: Cargo.toml
crates/lore-auth-server/src/: main.rs
crates/lore-authctl/: Cargo.toml
crates/lore-authctl/src/: main.rs
crates/lore-authctl/src/commands/: check.rs  grant.rs  group.rs  init_db.rs  mod.rs  repo.rs  signing_key.rs  token.rs  user.rs
crates/lore-authctl/tests/: cli.rs
crates/lore-claimprobe/: Cargo.toml
crates/lore-claimprobe/src/: main.rs
doc/: setup-guide.ja.md  setup-guide.md
doc/setup/: admin-ui.ja.md  admin-ui.md  authctl.ja.md  authctl.md  configuration.ja.md  configuration.md  deployment.ja.md  deployment.md  entra-id.ja.md  entra-id.md  google-oidc.ja.md  google-oidc.md  hands-on-quickstart.ja.md  hands-on-quickstart.md  identity-providers.ja.md  identity-providers.md  keycloak.ja.md  keycloak.md  local-smoke-test.ja.md  local-smoke-test.md  loreserver.ja.md  loreserver.md  operations.ja.md  operations.md  signing-keys.ja.md  signing-keys.md  tailscale.ja.md  tailscale.md  tls.ja.md  tls.md
internal/adapter/casbin/: model.conf  service.go  service_test.go
internal/adapter/google/: googleauth.go  googleauth_test.go
internal/adapter/idpregistry/: registry.go
internal/adapter/memory/: memory.go  memory_test.go
internal/adapter/oidc/: oidc.go  oidc_test.go
internal/adapter/rs256/: claims.go  issuer.go  jwks.go  keys.go  signer.go  token_test.go  verify.go
internal/adapter/sqlite/: auth_sessions.go  corestore.go  db.go  devices.go  login_states.go  login_transactions.go  migrations.go  models.go  repository.go  sessions.go  signing_keys.go  store_test.go  tokens.go
internal/adapter/sqlite/migrations/: 0001_init.sql  0002_ucs_auth.sql  0003_email_preregistration.sql  0004_csrf_tokens.sql  0005_login_states.sql  0005_login_transactions.sql  0006_login_state_nonce.sql  0007_external_identities.sql  0008_login_state_private_state.sql
internal/adapter/staticidp/: staticidp.go
internal/config/: config.go  config_test.go
internal/core/model/: admin.go  errors.go  identity.go  permission.go  resource.go  session.go  token.go
internal/core/ports/: admin.go  authorization.go  identity.go  identity_contract_test.go  resource.go  session.go  token.go  user.go
internal/core/service/: login.go  login_test.go  permission.go  resource.go  token.go  token_test.go
internal/device/: service.go  service_test.go
internal/grpcauth/: exchange_test.go  ratelimit.go  ratelimit_test.go  server.go  server_test.go  session_test.go  test_helpers_test.go  wire_test.go
internal/grpcrebac/: access.go  access_test.go  server.go  server_test.go
internal/httpserver/: server.go  server_test.go
internal/loreproto/epicurc/: auth_api_grpc.pb.go
internal/loreproto/ucsauth/: rebac_api.pb.go  rebac_api_grpc.pb.go
internal/ratelimit/: ratelimit.go
scripts/: fetch-admin-assets.sh
systemd/: lore-auth.service
test/arch/: arch_test.go
test/e2e/: .gitignore  README.md  db.go  e2e_test.go  harness.go  harness_external_test.go  harness_test.go  matrix_test.go  redact.go  run.sh
test/e2e/internal/loreproto/epicurc/: auth_api.pb.go
