[package]
name = "lore-auth-adapters"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
hex.workspace = true
ipnet.workspace = true
jsonwebtoken.workspace = true
lore-auth-core = { path = "../lore-auth-core" }
regex.workspace = true
rusqlite.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio-rusqlite.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
