[package]
name = "lore-auth-inbound"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
askama.workspace = true
axum = "0.7"
lore-auth-core = { path = "../lore-auth-core" }
lore-auth-proto = { path = "../lore-auth-proto" }
http = "1.3"
ipnet.workspace = true
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_yaml_ng.workspace = true
tonic.workspace = true
tower = { version = "0.5", features = ["util"] }
url.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
hex.workspace = true
lore-auth-adapters = { path = "../lore-auth-adapters" }
sha2.workspace = true
tokio.workspace = true

[lints]
workspace = true
