[package]
name = "lore-auth-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true

[lints]
workspace = true
