[package]
name = "lore-auth-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
lore-auth-adapters = { path = "../lore-auth-adapters" }
lore-auth-core = { path = "../lore-auth-core" }
lore-auth-inbound = { path = "../lore-auth-inbound" }
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
