[package]
name = "lore-auth-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.7"
clap.workspace = true
ipnet.workspace = true
lore-auth-adapters = { path = "../lore-auth-adapters" }
lore-auth-core = { path = "../lore-auth-core" }
lore-auth-inbound = { path = "../lore-auth-inbound" }
lore-auth-proto = { path = "../lore-auth-proto" }
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tower = { version = "0.5", features = ["util"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
