[package]
name = "lore-authctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
lore-auth-adapters = { path = "../lore-auth-adapters" }
lore-auth-core = { path = "../lore-auth-core" }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true

[lints]
workspace = true
