[package]
name = "lore-claimprobe"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
lore-auth-adapters = { path = "../lore-auth-adapters" }
lore-auth-core = { path = "../lore-auth-core" }
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
